Opened 9 years ago

Closed 9 years ago

#12808 closed bug (fixed)

cddb_lookup doesn't handle multi-line replies correctly

Reported by: axeld Owned by: axeld
Priority: normal Milestone: R1
Component: Applications/Command Line Tools Version: R1/Development
Keywords: cddb Cc:
Blocked By: Blocking:
Platform: All

Description

When a CD has long titles, they will be split into multiple lines in the reply from freedb. Any new line will add new track data in the implementation, though leading to incorrect title data which also affects the following tracks, as the indices are shifted.

Change History (2)

comment:1 by axeld, 9 years ago

Owner: changed from nobody to axeld
Status: newin-progress

comment:2 by axeld, 9 years ago

Resolution: fixed
Status: in-progressclosed

Fixed in hrev50389.

Note: See TracTickets for help on using tickets.