cddb_lookup: Support multiline track response.

* This fixes bug #12808.
* Also, don't accept track numbers above 99, as that's the maximum
  a CD supports.